--- a/docker/app/requirements.txt
+++ b/docker/app/requirements.txt
@@ -1,6 +1,6 @@
 Django==5.0
 djangorestframework==3.14.0
 mysqlclient
-djangorestframework-jwt
+djangorestframework-simplejwt
 django-cors-headers
 drf-spectacular==0.27.2
